# spotify_metadata_etl_project

./: .coverage  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  coverage.xml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  destroy.yml
infra/: README.md  docker-compose.yml
infra/deploy/: .terraform.lock.hcl  compute.tf  databases.tf  main.tf  networks.tf  variables.tf
infra/setup/: ecr.tf  iam.tf  main.tf  outputs.tf  variables.tf
spotify_metadata_etl_project/: load_data_to_local_postgres.py
