[project]
name = "spotify-metadata-etl-project"
version = "0.1.0"
description = ""
authors = [
    {name = "TiamTee Ng",email = "tiamtee666@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff (>=0.9.1,<0.10.0)",
    "pytest (>=8.3.4,<9.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.12"

[tool.poetry.group.test.dependencies]
ruff = ">=0.9.1,<0.10.0"
pytest = ">=8.3.4,<9.0.0"
pytest-cov = "^4.1.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

[tool.ruff]
line-length = 120
target-version = "py312"

select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
